miniflux/manifests/miniflux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
spec:
  replicas: 1

  selector:
    matchLabels:
      app: miniflux

  template:
    metadata:
      labels:
        app: miniflux

    spec:
      enableServiceLinks: false
      containers:
        - name: miniflux
          image: miniflux/miniflux:2.3.3

          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi

          ports:
            - name: http
              containerPort: 8080

          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30

          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
