miniflux/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
  annotations:
    gethomepage.dev/enabled: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/name: Miniflux
    gethomepage.dev/description: RSS reader
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: miniflux.png
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik

  rules:
    - host: miniflux.k8s.internal.smigorx.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  name: http
  tls:
    - hosts:
        - miniflux.k8s.internal.smigorx.eu
      secretName: miniflux-tls
